# sql5

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  pub.sh  publish.sh  py_cli_test.sh  pytest.sh  shtest.sh  sql5web.sh  test.sh  testall.sh
.github/workflows/: ci.yml  release.yml
_bak/: pypi.sh  server.sh  test.py  test.sh
_doc/: _ai.md  ccc_code_skill.md  ccc_doc_skill.md  code_skill.md  plan.md  sql5_v1.1.md  sql5_v1.2.md  sql5_v1.4.md  sql5_v1.5.md  v1.10.md  v1.11.md  v1.12.md  v1.13.md  v1.14.md  v1.15.md  v1.16.md  v1.17.md  v1.18.md  v1.19.md  v1.20.md  v1.21.md  v1.22.md  v1.3.md  v1.5.md  v1.6.md  v1.7.md  v1.8.md  v1.9.md  v2.0.md  v2.4.2.md  v3.0.md  v3.3-pycli.md  v3.4-web.md
sql/: sql5db2.txt  sql5test.txt
sql5_pypi/: LICENSE  README.md  pyproject.toml  setup.cfg
sql5_pypi/.github/workflows/: ci.yml  release.yml
sql5_pypi/_bak/: test_server.sh  test_sql5_server.py
sql5_pypi/examples/: mydb.sql5wal  sql5_hello.py  sql5test.py  test.sh  websocket_test.py  ws_test.sql5wal
sql5_pypi/sql5/: __init__.md  __init__.py  __main__.md  __main__.py  _binary.md  _binary.py  cli.py  client.md  client.py  sql5  web.py
sql5_pypi/sql5/static/: app.js  styles.css
sql5_pypi/tests/: __init__.py  test_sql5.py
src/: main.md  main.rs
src/btree/: README.md  mod.rs  node.md  node.rs  tree.md  tree.rs
src/catalog/: README.md  catalog.md  catalog.rs  meta.md  meta.rs  mod.rs
src/fts/: README.md  fts_table.md  fts_table.rs  index.md  index.rs  mod.rs  tokenizer.md  tokenizer.rs
src/interface/: README.md  mod.rs  repl.md  repl.rs  server.md  server.rs  websocket.md  websocket.rs
src/pager/: README.md  codec.md  codec.rs  mod.rs  storage.md  storage.rs  wal.md  wal.rs
src/parser/: README.md  ast.md  ast.rs  lexer.md  lexer.rs  mod.rs  parser.md  parser.rs
src/planner/: README.md  constraints.md  constraints.rs  datetime.md  datetime.rs  executor.md  executor.rs  mod.rs  plan.md  plan.rs  planner.md  planner.rs  transaction.md  transaction.rs
src/table/: README.md  mod.rs  row.md  row.rs  schema.md  schema.rs  serialize.md  serialize.rs  table.md  table.rs
