[package]
name = "sql5"
version = "3.2.17"
edition = "2024"
description = "SQLite compatible database with CJK FTS5 full-text search"
license = "MIT"

[package.metadata]
exclude = [".DS_Store"]

[dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"