[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql5"
version = "2.4.2"
description = "SQLite-compatible database with CJK FTS5 support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "cccrust"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
sql5 = "sql5.__main__:main"

[project.urls]
Homepage = "https://github.com/cccrust/sql5"
Documentation = "https://github.com/cccrust/sql5#readme"
Repository = "https://github.com/cccrust/sql5"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sql5*"]

[tool.setuptools.package-data]
sql5 = ["py.typed"]