[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql5"
version = "3.4.0"
description = "SQLite-compatible database with CJK FTS5 support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "cccrust"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["websocket-client>=1.0.0"]

[project.optional-dependencies]
dev = ["build", "twine"]
web = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sql5*"]

[tool.setuptools.package-data]
sql5 = ["py.typed"]