[metadata]
name = sql5
version = attr: sql5.__version__
description = SQLite-compatible database with CJK FTS5 support
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = cccrust
author_email =
url = https://github.com/cccrust/sql5
project_urls =
    Documentation = https://github.com/cccrust/sql5#readme
    Repository = https://github.com/cccrust/sql5
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: macOS
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =

[options.entry_points]
console_scripts =
    sql5 = sql5.__main__:main

[options.packages.find]
where = .
include = sql5*